Fixed display cutting off long numbers.

--- a/src/components/Display/display.module.css
+++ b/src/components/Display/display.module.css
@@ -1,11 +1,20 @@
 .Display {
     display: flex;
+    flex: 0 0 auto;
     background-color: #122831;
     color: #FAF6EE;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 2rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
     height: 15vh;
+    border: yellow 4px solid;
+}
+
+.Display div {
+    width: 100%;
+    text-align: right;
+    border: 3px solid green;
 }
 
 @media (max-width: 575px) {
